# dwight

./: .gitignore  Cargo.toml  build_on_pico.sh  flash.sh
.cargo/: config.toml
manual/: library.bib  main.tex  newcommands.tex  parse.sh  preamble.tex
src/: configuration.rs  dwight_pins.rs  hardware_interface.rs  lib.rs  machine.rs  main.rs  melody.rs  programs.rs  reaction_tester.rs  real_machine.rs  test_interface.rs  test_machine.rs  tone.rs
src/real_machine/: dwight_pins.rs  led_brightness.rs  mod.rs
